<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/server_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_status" />

    <TextView
        android:id="@+id/ip_status_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server_status_textview"
        android:layout_below="@+id/server_status_textview"
        android:layout_marginTop="20dp"
        android:text="@string/ip_status" />
    

    <Switch
        android:id="@+id/server_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ip_status_textview"
        android:layout_below="@+id/ip_status_textview"
        android:layout_marginTop="34dp"
        android:text="@string/service_turn" />
    
        <Switch
        android:id="@+id/webdav_ext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server_switch"
        android:layout_below="@+id/server_switch"
        android:layout_marginTop="37dp"
        android:text="@string/webdav_ext" />

    <Button
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server_switch"
        android:layout_below="@+id/server_switch"
        android:layout_marginTop="102dp"
        android:text="@string/debug" />



</RelativeLayout>